# devin

./: .gitignore  pyproject.toml  setup_nltk.py
frontend/crypto-trading-pwa/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/crypto-trading-pwa/public/: manifest.json  offline.html
frontend/crypto-trading-pwa/src/: App.tsx  main.tsx  service-worker.ts
frontend/crypto-trading-pwa/src/components/: MonitoringPanel.tsx  NotificationPreferences.tsx  ScreenshotUpload.tsx
frontend/crypto-trading-pwa/src/components/__tests__/: MonitoringPanel.test.tsx  ScreenshotUpload.test.tsx
frontend/crypto-trading-pwa/src/components/ui/: alert.tsx  card.tsx  switch.tsx
frontend/crypto-trading-pwa/src/services/: websocket.ts
frontend/crypto-trading-pwa/src/test/: setup.ts
trading_backend/: .gitattributes  .gitignore  pyproject.toml
trading_backend/alembic/: env.py
trading_backend/alembic/versions/: add_trading_signals_table.py
trading_backend/app/: main.py
trading_backend/app/routers/: __init__.py  chinese_platforms.py  market_analysis.py  notification.py  screenshot.py  social_discovery.py  trading.py
trading_backend/app/services/market_analysis/: exceptions.py  market_cycle.py
trading_backend/app/services/monitoring/: accuracy_monitor.py
trading_backend/app/services/notification/: email_service.py
trading_backend/app/services/ocr/: ocr_service.py  signal_extractor.py
trading_backend/app/services/trading_strategy/: strategy.py
trading_backend/app/services/web_scraping/: account_discovery.py  chinese_scraper.py  english_scraper.py  english_sentiment.py  sentiment_analyzer.py  twitter_scraper.py  youtube_scraper.py
trading_backend/app/services/web_scraping/models/finbert/: config.json
trading_backend/cache/chinese_platforms/market_sentiment/: ETH.json
trading_backend/cache/douyin/search/videos/: BTC.json
trading_backend/models/: market_cycle_model.joblib
trading_backend/scripts/: initialize_finbert.py  initialize_model.py
trading_backend/tests/: conftest.py  test_account_discovery.py  test_chinese_platforms.py  test_english_scraper.py  test_english_sentiment.py  test_market_analysis.py  test_notification.py  test_real_time_accuracy.py  test_screenshot.py  test_screenshot_analysis.py  test_signal_extractor.py  test_signal_storage.py  test_social_integration.py  test_trading_strategy.py  test_twitter_scraper.py  test_youtube_scraper.py  verify_features.sh
trading_backend/tests/data/: mock_responses.py  test_pattern_complex.txt  test_pattern_double_bottom.txt  test_pattern_double_top.txt  test_pattern_head_and_shoulders.txt  test_pattern_triangle.txt  test_pattern_wedge.txt  test_screenshot_cn.txt  test_screenshot_en.txt  test_screenshot_mixed.txt
trading_backend/tests/integration/: test_market_signals.py
